continuation of arch setup
