# go/ansar-broker/internal/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/accounts": {
+        "/api/v1/accounts/open": {
             "post": {
                 "description": "Creates a new account with initial balance",
                 "consumes": [
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rest.OpenAccountRequest"
+                            "$ref": "#/definitions/http.openAccountRequest"
                         }
                     }
                 ],
@@ -32,13 +32,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest.OpenAccountResponse"
+                            "$ref": "#/definitions/http.openAccountResponse"
                         }
                     }
                 }
             }
         },
-        "/users": {
+        "/api/v1/users/create": {
             "post": {
                 "description": "Creates a new user",
                 "consumes": [
@@ -58,7 +58,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rest.CreateUserRequest"
+                            "$ref": "#/definitions/http.createUserRequest"
                         }
                     }
                 ],
@@ -66,7 +66,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest.CreateUserResponse"
+                            "$ref": "#/definitions/http.createUserResponse"
                         }
                     }
                 }
@@ -74,7 +74,7 @@
         }
     },
     "definitions": {
-        "rest.CreateUserRequest": {
+        "http.createUserRequest": {
             "type": "object",
             "properties": {
                 "city": {
@@ -120,10 +120,16 @@
                 }
             }
         },
-        "rest.CreateUserResponse": {
-            "type": "object"
+        "http.createUserResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "123e4567-e89b-12d3-a456-426614174000"
+                }
+            }
         },
-        "rest.OpenAccountRequest": {
+        "http.openAccountRequest": {
             "type": "object",
             "properties": {
                 "balance": {
@@ -134,7 +140,7 @@
                 }
             }
         },
-        "rest.OpenAccountResponse": {
+        "http.openAccountResponse": {
             "type": "object",
             "properties": {
                 "balance": {
